<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.galixo.autoClicker.modules.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_script"
        android:name="com.galixo.autoClicker.modules.script.presentation.ui.ScriptFragment"
        android:label="@string/title_script"
        tools:layout="@layout/fragment_script" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.galixo.autoClicker.modules.settings.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>